0.22.9	UNRELEASED

 * Fix ``LocalGitClient`` assertion error when fetching externally cloned repositories
   into ``MemoryRepo``. Previously, the client would fail with an AssertionError
   when trying to process pack data from repositories that were cloned externally.
   (Jelmer Vernooĳ, #1179)

 * Add support for ``format`` argument to ``Repo.init()`` and ``Repo.init_bare()``
   to specify repository format version (0 or 1). This allows creating repositories
   with different format versions by setting the ``core.repositoryformatversion``
   configuration value. (Jelmer Vernooĳ)

 * Fix Rust implementation of ``sorted_tree_items()`` to correctly handle submodules.
   Previously, submodules (mode 0o160000) were incorrectly treated as directories
   in the sorting order, causing different results compared to the Python
   implementation. (Jelmer Vernooĳ, #1325)

 * Fix ``porcelain.add()`` to stage both untracked and modified files when no
   paths are specified. Previously, only untracked files were staged, inconsistent
   with Git's behavior. Now behaves like ``git add -A`` when called without paths.
   (Jelmer Vernooĳ, #746)

 * Fix ``porcelain.add()`` symlink handling to allow adding symlinks that point
   outside the repository. Previously, the function would fail when trying to
   add a symlink pointing outside the repo due to aggressive path resolution.
   Now only resolves the parent directory for symlinks, matching Git's behavior.
   (Jelmer Vernooĳ, #789)

 * Fix ``porcelain.add()`` when adding repository root path or directories.
   Previously, adding the repository path itself would incorrectly stage
   ``b'./'`` instead of the actual untracked files, leading to
   repository corruption.  (Jelmer Vernooĳ, #1178, #655)

 * Improve ``porcelain.add()`` documentation to correctly describe default
   behavior. (Jelmer Vernooĳ, #895)

 * Fix gitignore pattern matching for directory negation patterns. Patterns like